# theta-computer-use

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.py  example_cua.py  example_multiple.py  example_single.py
theta/: __init__.py  client.py  environment.py  models.py  requests.py  session.py  settings.py
theta/agents/: __init__.py  claude_cua.py  openai_cua.py
